--- a/html/index.html
+++ b/html/index.html
@@ -5,5 +5,8 @@
 </head>
 <body>
   <div id="image">
+    <div id="theDiv"><img id="theImg"  src="theImg.png" />Where is the image?</div>
   </div>
+  <script href="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+  <script>$('#theDiv').prepend('<img id="theImg" src="theImg.png" />')</script>
 </body>
